--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "3.6.9",
     "@prisma/client": "3.15.2",
+    "apollo-server-micro": "3.9.0",
+    "graphql": "16.5.0",
+    "micro-cors": "0.1.1",
     "next": "^12.0.7",
+    "nexus": "1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
