--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@apollo/client": "3.6.9",
+    "@auth0/nextjs-auth0": "1.9.1",
     "@prisma/client": "3.15.2",
     "apollo-server-micro": "3.9.0",
     "graphql": "16.5.0",
@@ -16,7 +17,9 @@
     "next": "^12.0.7",
     "nexus": "1.3.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "7.33.1",
+    "react-hot-toast": "2.2.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.4.0",
@@ -29,5 +32,8 @@
     "tailwindcss": "^3.0.8",
     "tsx": "3.6.0",
     "typescript": "^4.3.5"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   }
 }
